adjusted article card height and flixed overflowing issue in header

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,3 +34,7 @@ body {
 .listItemStyle > * {
   margin-bottom: 1rem;
 }
+
+.justify-article-height {
+  height: calc(100% - 13rem);
+}
